# oauth_service

./: .env.example.txt  .env.sample.txt  Dockerfile  README.md  __init__.py  debug_db_import.py  debug_imports.py  debug_project.py  diagnose_import.py  docker-compose.yml  init_db.py  main.py  manifest.in  nginx_oauth_service.conf  oauth.service  requirements.txt  setup.cfg  setup.py  setup_project.sh
core/: __init__.py  token_manager.py
data/: oauth.db
docs/: openapi.yaml
examples/: facebook_example.py  instagram_example.py  linkedin_example.py  twitter_example.py
examples/react/: .env.local  FacebookAuth.tsx  InstagramAuth.tsx  InstagramPopupHandler.ts  LinkeInAuth.tsx  LinkedInAuth.tsx  LinkedInPopupHandler.ts  LinkedInTokenExchange.ts  OAuthDemo.tsx  OAuthPopupHandler.ts  SocialConnections.tsx  TwitterAuth.tsx  TwitterButton.tsx  TwitterPopupHandler.ts  TwitterTokenExchange.ts  env.d.ts  useTwitterAuth.ts
models/: __init__.py  oauth_models.py
oauth_service/: __init__.py  auth.py  config.py  main.py
oauth_service/api/: api_key_storage.py
oauth_service/core/: __init__.py  db.py  oauth_base.py  token_manager.py  token_refresh.py  token_refresh_handler.py
oauth_service/models/: oauth_models.py
oauth_service/routes/: __init__.py  oauth_callbacks.py  oauth_routes.py  oauth_utils.py
oauth_service/scripts/: refresh_tokens.py
oauth_service/services/: token_refresh_service.py
routes/: oauth_routes.py
tests/: __init__.py  conftest.py  test_core.py  test_platforms.py  test_routes.py
utils/: __init__.py  rate_limiter.py
(+17 files in other folders)
