[metadata]
name = oauth_service
version = 1.0.0
description = A comprehensive OAuth implementation supporting multiple platforms
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/oauth-service
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp>=3.9.3
    cryptography>=42.0.5
    fastapi>=0.110.0
    pydantic>=2.6.3
    python-dotenv>=1.0.1
    requests-oauthlib>=1.3.1
    SQLAlchemy>=2.0.27
    tweepy>=4.14.0
    uvicorn>=0.27.1

[options.packages.find]
include = oauth_service*
